--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,26 @@ spring.datasource.username=postgres
 spring.datasource.password=173725Hrm
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#mailService
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rezaeen77@gmail.com
+spring.mail.password=okhwxnbweobwhiwl
+
+
+
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class =javax.net.ssl.SSLSocketFactory
+
+server.port=8080
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
