--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=173725Hrm
+spring.datasource.password=********
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rezaeen77@gmail.com
-spring.mail.password=okhwxnbweobwhiwl
+spring.mail.password=*********
 
 
 
